<resources>
    <string name="app_name">Mental Math Trainer</string>
    <string name="introduction_text">With this is app, you can train your math skills. It tells you random exercises,
        in an range you can set before you begin to solve the exercises. The number of exercises is also chosen before
        the test begins.
        Supported arithmetic operations are currently: addition.
    </string>
    <string name="introduction_title">Introduction</string>
    <string name="button_new_training_session">Let\'s go!</string>
    <string name="title_activity_new_training_session">New Training Session</string>
    <string name="new_training_session_title">Adjust the Settings</string>
    <string name="addition_switch">Addition</string>
    <string name="max_addition_value">Maximum addition value</string>
    <string name="default_max_addition_value">100</string>
    <string name="number_of_exercises">Number of exercises</string>
    <string name="default_number_of_exercises">10</string>
    <string name="addition_switch_help">Turn addition on/off for the exercises that will be randomly generated.
        (Not editable,because it is currently the only arithmetic operation supported.)
    </string>
    <string name="ok">OK</string>
    <string name="back">Back</string>
    <string name="addition_switch_help_title">Turn Addition On/Off</string>
    <string name="max_addition_value_help_title">Maximum Addition Value</string>
    <string name="max_addition_value_help">This is the biggest number that can show up in the following exercises.
        Please notice that this isn\'t the biggest solution that can show up (the biggest solution is two times bigger),
        so
        the overall maximum value is 10,000.
    </string>
    <string name="number_of_exercises_help_title">Number of Exercises</string>
    <string name="number_of_exercises_help">This number affects after how many exercises the training session stops.
        The absolute maximum value is set to 1,000, to pretend you from endless calculating exercises.
    </string>
    <string name="button_next_activity">Go on!</string>
    <string name="title_activity_check_your_settings">Check Your Settings!</string>
    <string name="check_your_settings_title">Do the settings fit?</string>
    <string name="no_editing_help_title">No editing?</string>
    <string name="no_editing_help">No, to edit the settings, you have to go back and edit them. Here you can only see them
        and start a training session, if you like the settings.</string>
</resources>
