<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="5sp"
        android:paddingEnd="5sp"
        android:paddingTop="5sp"
        android:background="@color/colorBackground" android:clickable="false">
    <TextView
            android:id="@+id/new_training_session"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_training_session_title"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/textColorPrimary"
            android:textAlignment="center"/>
    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <Switch
                    android:layout_gravity="center_vertical"
                    android:id="@+id/addition_switch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="normal"
                    android:textSize="18sp"
                    android:textColor="@color/textColorPrimary"
                    android:checked="true"
                    android:clickable="true"
                    android:enabled="true"
                    android:onClick="onClickAdditionSwitch"
                    android:text="@string/addition_switch" android:layout_weight="1"/>
            <ImageButton
                    android:background="@color/colorInvisible"
                    android:src="@android:drawable/ic_menu_help"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:onClick="onClickAdditionSwitchHelp"
                    android:focusable="true"
                    android:longClickable="true"
                    android:layout_gravity="end"/>
        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/max_addition_value"
                    android:textStyle="normal"
                    android:textSize="18sp"
                    android:textColor="@color/textColorPrimary"/>
            <EditText
                    android:onClick="onClickMaxAdditionValue"
                    android:textColorHint="@color/textColorSecondary"
                    android:textAlignment="center"
                    android:id="@+id/max_addition_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:layout_weight="1"
                    android:textStyle="normal"
                    android:textSize="18sp"
                    android:textColor="@color/textColorPrimary"
                    android:hint="@string/default_max_addition_value"/>
            <ImageButton
                    android:onClick="onClickMaxAdditionValueHelp"
                    android:focusable="true"
                    android:longClickable="true"
                    android:background="@color/colorInvisible"
                    android:src="@android:drawable/ic_menu_help"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:layout_gravity="end"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                    android:textColor="@color/textColorPrimary"
                    android:textSize="18sp"
                    android:textStyle="normal"
                    android:text="@string/number_of_exercises"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <EditText
                    android:onClick="onClickNumberOfExercises"
                    android:textColorHint="@color/textColorSecondary"
                    android:textAlignment="center"
                    android:id="@+id/number_of_exercises"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:layout_weight="1"
                    android:textStyle="normal"
                    android:textSize="18sp"
                    android:textColor="@color/textColorPrimary"
                    android:hint="@string/default_number_of_exercises"/>
            <ImageButton
                    android:onClick="onClickNumberOfExercisesHelp"
                    android:focusable="true"
                    android:longClickable="true"
                    android:background="@color/colorInvisible"
                    android:src="@android:drawable/ic_menu_help"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:layout_gravity="end"/>
        </TableRow>
        <TableRow>
            <Button
                    android:onClick="onClickNextActivity"
                    android:layout_weight="1"
                    android:textStyle="normal"
                    android:textSize="18sp"
                    android:textColor="@color/textColorPrimary"
                    android:background="@color/colorBackgroundButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_next_activity"/>
        </TableRow>
    </TableLayout>

</LinearLayout>