<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="5sp"
        android:paddingEnd="5sp"
        android:paddingTop="5sp"
        android:background="@color/colorBackground"
        android:clickable="false">

    <TextView
            android:text="@string/check_your_settings_title"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/textColorPrimary"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <Switch
                    android:onClick="onClickAdditionSwitch"
                    android:layout_gravity="center_vertical"
                    android:id="@+id/addition_switch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="normal"
                    android:textSize="18sp"
                    android:textColor="@color/textColorPrimary"
                    android:checked="true"
                    android:clickable="true"
                    android:enabled="true"
                    android:text="@string/addition_switch"
                    android:layout_weight="1"/>
        </TableRow>
        <TableRow
                android:layout_height="wrap_content"
                android:layout_width="match_parent">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/max_addition_value"
                    android:textStyle="normal"
                    android:textSize="18sp"
                    android:textColor="@color/textColorPrimary"/>
            <EditText
                    android:editable="false"
                    android:clickable="true"
                    android:onClick="onClickMaxAdditionValue"
                    android:textColorHint="@color/textColorSecondary"
                    android:textAlignment="center"
                    android:id="@+id/max_addition_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:enabled="true"
                    android:layout_weight="1"
                    android:textStyle="normal"
                    android:textSize="18sp"
                    android:textColor="@color/textColorPrimary"
                    />
        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:textColor="@color/textColorPrimary"
                    android:textSize="18sp"
                    android:textStyle="normal"
                    android:text="@string/number_of_exercises"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <EditText
                    android:editable="false"
                    android:clickable="true"
                    android:onClick="onClickNumberOfExercises"
                    android:textColorHint="@color/textColorSecondary"
                    android:textAlignment="center"
                    android:id="@+id/number_of_exercises"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:enabled="true"
                    android:layout_weight="1"
                    android:textStyle="normal"
                    android:textSize="18sp"
                    android:textColor="@color/textColorPrimary"
                    />
        </TableRow>
    </TableLayout>

</LinearLayout>